# rez-sandbox

./: README.md  build_image_docker.bat  docker-compose.yml
config/: rezconfig.py  servers.json
docs/: conf.py  index.rst
rez_context_tracking_consumer/: Dockerfile  pyproject.toml
rez_context_tracking_consumer/rez_context_tracking_consumer/: __main__.py
scripts/: build_image.ps1  set_rezconfig.ps1
